--- a/nginx/fastcgi.conf
+++ b/nginx/fastcgi.conf
@@ -1,9 +1,11 @@
 include fastcgi_params;
-fastcgi_split_path_info ^(.+\.php)(/.*)$;
+
 fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-fastcgi_param PATH_INFO $fastcgi_path_info;
+fastcgi_param PATH_INFO $path_info;
 fastcgi_param HTTPS on;
-fastcgi_param modHeadersAvailable true;
-fastcgi_param front_controller_active true;
+
+fastcgi_param modHeadersAvailable true;         # Avoid sending the security headers twice
+fastcgi_param front_controller_active true;     # Enable pretty urls
+
 fastcgi_intercept_errors on;
 fastcgi_request_buffering off;
