--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -22,6 +22,8 @@ events {
   # use kqueue;
 }
 
+#error_log  /var/log/nginx/main-errors.log;
+#error_log /dev/stdout info;
 pid        /var/run/nginx.pid;
 
 http {
@@ -65,8 +67,7 @@ http {
     gzip on;
     gzip_vary on;
     gzip_comp_level 4;
-
-    gzip_min_length 10240;
+    gzip_min_length 256;
     gzip_proxied expired no-cache no-store private no_last_modified no_etag auth;
     gzip_types text/javascript application/x-javascript application/atom+xml application/javascript application/json application/ld+json application/manifest+json application/rss+xml application/vnd.geo+json application/vnd.ms-fontobject application/x-font-ttf application/x-web-app-manifest+json application/xhtml+xml application/xml font/opentype image/bmp image/svg+xml image/x-icon text/cache-manifest text/css text/plain text/vcard text/vnd.rim.location.xloc text/vtt text/xml text/x-component text/x-cross-domain-policy;
     gzip_disable "msie6";
