Switch master to amd64 arch

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   db:
-    image: arm64v8/mariadb
+    image: mariadb
     command: --transaction-isolation=READ-COMMITTED --binlog-format=ROW
     restart: always
     volumes:
@@ -11,13 +11,13 @@ services:
       - nextcloud.env
 
   redis:
-    image: arm64v8/redis:alpine
+    image: redis:alpine
     volumes:
       - redis:/data
     restart: always
 
   cloud:
-    image: arm64v8/nextcloud:fpm-alpine
+    image: nextcloud:fpm-alpine
     restart: always
     volumes:
       - nextcloud:/var/www/html
@@ -33,7 +33,7 @@ services:
       - redis
 
   nginx:
-    image: arm64v8/nginx:alpine
+    image: nginx:alpine
     restart: always
     ports:
       - 443:443/tcp
@@ -53,7 +53,7 @@ services:
       - cloud
 
   cron:
-    image: arm64v8/nextcloud:fpm-alpine
+    image: nextcloud:fpm-alpine
     restart: always
     volumes:
       - nextcloud:/var/www/html
