--- a/nextcloud.conf
+++ b/nextcloud.conf
@@ -26,6 +26,8 @@ server {
     client_max_body_size 512M;
     fastcgi_buffers 64 4K;
 
+    send_timeout 720;
+
     # Pagespeed is not supported by Nextcloud, so if your server is built
     # with the `ngx_pagespeed` module, uncomment this line to disable it.
     #pagespeed off;
@@ -45,9 +47,6 @@ server {
     # always provides the desired behaviour.
     index index.php index.html /index.php$request_uri;
 
-    # Default Cache-Control policy
-    expires 1m;
-
     # Rule borrowed from `.htaccess` to handle Microsoft DAV clients
     location = / {
         if ( $http_user_agent ~ ^DavClnt ) {
@@ -66,22 +65,22 @@ server {
     # `location ~ /(\.|autotest|...)` which would otherwise handle requests
     # for `/.well-known`.
     location ^~ /.well-known {
-        # The following 6 rules are borrowed from `.htaccess`
+        # The rules in this block are an adaptation of the rules
+        # in `.htaccess` that concern `/.well-known`.
 
-        rewrite ^/\.well-known/host-meta\.json  /public.php?service=host-meta-json  last;
-        rewrite ^/\.well-known/host-meta        /public.php?service=host-meta       last;
-        rewrite ^/\.well-known/webfinger        /public.php?service=webfinger       last;
-        rewrite ^/\.well-known/nodeinfo         /public.php?service=nodeinfo        last;
+        location = /.well-known/carddav { return 301 /remote.php/dav/; }
+        location = /.well-known/caldav  { return 301 /remote.php/dav/; }
+        location /.well-known/acme-challenge    { try_files $uri $uri/ =404; }
+        location /.well-known/pki-validation    { try_files $uri $uri/ =404; }
 
-        location = /.well-known/carddav     { return 301 /remote.php/dav/; }
-        location = /.well-known/caldav      { return 301 /remote.php/dav/; }
-
-        try_files $uri $uri/ =404;
+        # Let Nextcloud's API for `/.well-known` URIs handle all other
+        # requests by passing them to the front-end controller.
+        return 301 /index.php$request_uri;
     }
 
     # Rules borrowed from `.htaccess` to hide certain paths from clients
     location ~ ^/(?:build|tests|config|lib|3rdparty|templates|data)(?:$|/)  { return 404; }
-    location ~ ^/(?:\.|autotest|occ|issue|indie|db_|console)              { return 404; }
+    location ~ ^/(?:\.|autotest|occ|issue|indie|db_|console)                { return 404; }
 
     # Ensure this block, which passes PHP files to the PHP process, is above the blocks
     # which handle static assets (as seen below). If this block is not declared first,
@@ -90,13 +89,13 @@ server {
     location ~ \.php(?:$|/) {
         fastcgi_split_path_info ^(.+?\.php)(/.*)$;
         set $path_info $fastcgi_path_info;
+
         try_files $fastcgi_script_name =404;
 
         include fastcgi.conf;
-        fastcgi_pass php-handler;
     }
 
-    location ~ \.(?:css|js|svg|gif)$ {
+    location ~ \.(?:css|js|svg|gif|png|jpg|ico)$ {
         try_files $uri /index.php$request_uri;
         expires 6M;         # Cache-Control policy borrowed from `.htaccess`
         access_log off;     # Optional: Don't log access to assets
@@ -108,14 +107,12 @@ server {
         access_log off;     # Optional: Don't log access to assets
     }
 
-    location / {
-        try_files $uri $uri/ /index.php$request_uri;
+    # Rule borrowed from `.htaccess`
+    location /remote {
+        return 301 /remote.php$request_uri;
     }
 
-    location ~ ^(?:index|remote|public|cron|core\/ajax\/update|status|ocs\/v[12]|updater\/.+|oc[ms]-provider\/.+|.+\/richdocumentscode\/proxy)\.php(?:$|\/) {
-	fastcgi_split_path_info ^(.+?.php)(\/.*|)$;
-	set $path_info $fastcgi_path_info;
-	try_files $fastcgi_script_name =404;
-	include fastcgi_params;
+    location / {
+        try_files $uri $uri/ /index.php$request_uri;
     }
 }
