--- a/nginx/headers.conf
+++ b/nginx/headers.conf
@@ -1,12 +1,8 @@
-add_header Alternate-Protocol  443:npn-spdy/3;
 add_header Strict-Transport-Security "max-age=31536000; includeSubdomains;";
-add_header Access-Control-Allow-Origin "*";
-add_header Access-Control-Allow-Credentials "true";
-add_header X-XSS-Protection "1; mode=block";
-add_header X-Frame-Options SAMEORIGIN;
-add_header X-Content-Type-Options "nosniff";
-add_header Last-Modified $sent_http_Expires;
-add_header X-Robots-Tag none;
-add_header X-Download-Options noopen;
-add_header X-Permitted-Cross-Domain-Policies none;
-add_header Referrer-Policy no-referrer;
+add_header Referrer-Policy                      "no-referrer"   always;
+add_header X-Content-Type-Options               "nosniff"       always;
+add_header X-Download-Options                   "noopen"        always;
+add_header X-Frame-Options                      "SAMEORIGIN"    always;
+add_header X-Permitted-Cross-Domain-Policies    "none"          always;
+add_header X-Robots-Tag                         "none"          always;
+add_header X-XSS-Protection                     "1; mode=block" always;
