--- a/nextcloud.env.example
+++ b/nextcloud.env.example
@@ -1,4 +1,3 @@
-MYSQL_PASSWORD=nextcloud
-MYSQL_DATABASE=nextcloud
-MYSQL_USER=nextcloud
-MYSQL_ROOT_PASSWORD=nextcloud
+POSTGRES_PASSWORD=nextcloud
+POSTGRES_DB=nextcloud
+POSTGRES_USER=nextcloud
