--- a/nextcloud.conf
+++ b/nextcloud.conf
@@ -3,10 +3,17 @@ upstream php-handler {
 }
 
 server {
-    server_name "";
+    server_name "test.local";
+    listen 80;
 
-    include ssl.conf;
-    include headers.conf;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubdomains;";
+    add_header Referrer-Policy                      "no-referrer"   always;
+    add_header X-Content-Type-Options               "nosniff"       always;
+    add_header X-Download-Options                   "noopen"        always;
+    add_header X-Frame-Options                      "SAMEORIGIN"    always;
+    add_header X-Permitted-Cross-Domain-Policies    "none"          always;
+    add_header X-Robots-Tag                         "none"          always;
+    add_header X-XSS-Protection                     "1; mode=block" always;
 
     # Path to the root of your installation
     root /var/www/html;
@@ -92,7 +99,19 @@ server {
 
         try_files $fastcgi_script_name =404;
 
-        include fastcgi.conf;
+        fastcgi_read_timeout 720;
+
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $path_info;
+        fastcgi_param HTTPS on;
+
+        fastcgi_param modHeadersAvailable true;         # Avoid sending the security headers twice
+        fastcgi_param front_controller_active true;     # Enable pretty url
+        fastcgi_pass php-handler;
+
+        fastcgi_intercept_errors on;
+        fastcgi_request_buffering off;
     }
 
     location ~ \.(?:css|js|svg|gif|png|jpg|ico)$ {
