--- a/nextcloud.conf
+++ b/nextcloud.conf
@@ -3,7 +3,7 @@ upstream php-handler {
 }
 
 server {
-    server_name "test.local";
+    server_name "";
     listen 80;
 
     add_header Strict-Transport-Security "max-age=31536000; includeSubdomains;";
