--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     networks:
       - nextcloud
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready", "-U", "nextcloud", "-d", "nextcloud" ]
+      test: [ "CMD-SHELL", "pg_isready", "-d", "nextcloud" ]
       interval: 30s
       timeout: 60s
       retries: 10
