--- a/nginx.conf
+++ b/nginx.conf
@@ -83,7 +83,7 @@ http {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Real-IP $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-FORWARDED-PROTO $scheme;
+    proxy_set_header X-FORWARDED-PROTO "https";
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection $http_connection;
     client_max_body_size 1m;
