--- a/nextcloud.conf
+++ b/nextcloud.conf
@@ -114,7 +114,7 @@ server {
         fastcgi_request_buffering off;
     }
 
-    location ~ \.(?:css|js|svg|gif|png|jpg|ico)$ {
+    location ~ \.(?:css|js|mjs|svg|gif|png|jpg|ico|wasm|tflite|map|ogg|flac)$ {
         try_files $uri /index.php$request_uri;
         expires 6M;         # Cache-Control policy borrowed from `.htaccess`
         access_log off;     # Optional: Don't log access to assets
