--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 networks:
   proxy:
     external: true
@@ -10,8 +8,10 @@ services:
     restart: always
     volumes:
       - db:/var/lib/postgresql/data
-    env_file:
-      - nextcloud.env
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
     networks:
       - proxy
     healthcheck:
@@ -44,8 +44,10 @@ services:
     environment:
       - REDIS_HOST=redis
       - REDIS_HOST_PORT=6379
-    env_file:
-      - nextcloud.env
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_HOST=db
     depends_on:
       - db
       - redis
@@ -64,7 +66,7 @@ services:
       - cloud
     labels:
       - traefik.enable=true
-      - traefik.http.routers.nextcloud.rule=Host(`nextcloud.localhost`)
+      - traefik.http.routers.nextcloud.rule=Host(`${NEXTCLOUD_DOMAIN}`)
       - traefik.http.services.nextcloud.loadbalancer.server.port=80
 
       - traefik.http.middlewares.nextredirect.redirectregex.regex=^https://www\.(.*)
@@ -91,12 +93,19 @@ services:
       - nextcloud:/var/www/html
       - ./nextcloud.ini:/usr/local/etc/php/conf.d/nextcloud.ini:ro
     entrypoint: /cron.sh
-    env_file:
-      - nextcloud.env
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_HOST_PORT=6379
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_HOST=db
     depends_on:
       - db
       - redis
       - cloud
+    networks:
+      - proxy
 
 volumes:
   db:
