--- a/nextcloud.ini
+++ b/nextcloud.ini
@@ -1,3 +1,3 @@
-memory_limit=512M
-upload_max_filesize=${PHP_UPLOAD_LIMIT}
-post_max_size=${PHP_UPLOAD_LIMIT}
+memory_limit=1024M
+upload_max_filesize=1024M
+post_max_size=1024M
