--- a/example.env
+++ b/example.env
@@ -1,4 +1,6 @@
 NEXTCLOUD_DOMAIN=nextcloud.localhost
+NEXTCLOUD_ADMIN_USER=admin
+NEXTCLOUD_ADMIN_PASSWORD=pass
 POSTGRES_PASSWORD=root
 POSTGRES_DB=root
 POSTGRES_USER=root
