--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,6 @@
 networks:
+  ${NAME}_internal:
+    driver: bridge
   proxy:
     external: true
 
@@ -13,7 +15,7 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
     networks:
-      - proxy
+      - ${NAME}_internal
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready", "-d", "nextcloud" ]
       interval: 30s
@@ -27,7 +29,7 @@ services:
       - redis:/data
     restart: always
     networks:
-      - proxy
+      - ${NAME}_internal
     healthcheck:
       test: [ "CMD-SHELL", "redis-cli ping | grep PONG" ]
       interval: 3s
@@ -52,9 +54,9 @@ services:
       - db
       - redis
     networks:
-      - proxy
+      - ${NAME}_internal
 
-  nginx:
+  nginx_${NAME}:
     image: nginx:alpine
     restart: always
     volumes:
@@ -82,8 +84,8 @@ services:
       - traefik.http.middlewares.nc-header.headers.customRequestHeaders.X-Forwarded-Proto=https
       - traefik.http.middlewares.nc-header.headers.customResponseHeaders.X-Robots-Tag=none
       - traefik.http.middlewares.nc-header.headers.customFrameOptionsValue=SAMEORIGIN
-
     networks:
+      - ${NAME}_internal
       - proxy
 
   cron:
@@ -105,7 +107,7 @@ services:
       - redis
       - cloud
     networks:
-      - proxy
+      - ${NAME}_internal
 
 volumes:
   db:
