--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,22 +6,23 @@ networks:
 
 services:
   db:
-    image: postgres:16-alpine
+    image: postgres:17-alpine
     restart: always
     volumes:
       - db:/var/lib/postgresql/data
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - PGPASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
     networks:
       - nextcloud_internal
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready", "-d", "nextcloud" ]
-      interval: 30s
+      test: [ "CMD-SHELL", "pg_isready", "-d", "$POSTGRES_DB", "-u", "$POSTGRES_USER" ]
+      interval: 15s
       timeout: 60s
       retries: 10
-      start_period: 60s
+      start_period: 5s
 
   redis:
     image: redis:7-alpine
