--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,7 @@ services:
       - POSTGRES_HOST=db
       - NEXTCLOUD_ADMIN_USER=${NEXTCLOUD_ADMIN_USER}
       - NEXTCLOUD_ADMIN_PASSWORD=${NEXTCLOUD_ADMIN_PASSWORD}
+      - NEXTCLOUD_TRUSTED_DOMAINS=${NEXTCLOUD_DOMAIN}
     depends_on:
       - db
       - redis
@@ -71,9 +72,8 @@ services:
       - cloud
     labels:
       - traefik.enable=true
-      - traefik.http.routers.nextcloud.rule=Host(`${NEXTCLOUD_DOMAIN}`)
+      - traefik.http.routers.nextcloud.rule=Host(`$${NEXTCLOUD_DOMAIN}`)
       - traefik.http.services.nextcloud.loadbalancer.server.port=80
-
       - traefik.http.middlewares.nextredirect.redirectregex.regex=^https://www\.(.*)
       - traefik.http.middlewares.nextredirect.redirectregex.replacement=https://$${1}
       - traefik.http.routers.nextcloud.middlewares=nextredirect
