--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,7 +72,7 @@ services:
       - cloud
     labels:
       - traefik.enable=true
-      - traefik.http.routers.nextcloud.rule=Host(`$${NEXTCLOUD_DOMAIN}`)
+      - traefik.http.routers.nextcloud.rule=Host(`${NEXTCLOUD_DOMAIN}`)
       - traefik.http.services.nextcloud.loadbalancer.server.port=80
       - traefik.http.middlewares.nextredirect.redirectregex.regex=^https://www\.(.*)
       - traefik.http.middlewares.nextredirect.redirectregex.replacement=https://$${1}
