Upd nginx config

--- a/nextcloud.conf
+++ b/nextcloud.conf
@@ -17,9 +17,12 @@ server {
     # Path to the root of your installation
     root /var/www/html;
 
+    send_timeout 720;
+    fastcgi_read_timeout 720;
+
     # set max upload size and increase upload timeout:
     client_max_body_size 512M;
-    client_body_timeout 300s;
+    client_body_timeout 720s;
     fastcgi_buffers 64 4K;
 
     # Enable gzip but do not remove ETag headers
@@ -56,8 +59,8 @@ server {
     # only for Nextcloud like below:
     include mime.types;
     types {
-        text/javascript mjs;
-	application/wasm wasm;
+        text/javascript js mjs;
+    	application/wasm wasm;
     }
 
     # Specify how to handle directories -- specifying `/index.php$request_uri`
