--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,9 @@ services:
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -d ${POSTGRES_DB} -U ${POSTGRES_USER}" ]
       interval: 15s
-      timeout: 60s
-      retries: 10
-      start_period: 5s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
 
   redis:
     image: redis:7-alpine
@@ -33,9 +33,10 @@ services:
       - nextcloud_internal
     healthcheck:
       test: [ "CMD-SHELL", "redis-cli ping | grep PONG" ]
-      interval: 3s
+      interval: 15s
       timeout: 5s
-      retries: 10
+      retries: 5
+      start_period: 10s
 
   cloud:
     image: nextcloud:fpm-alpine
@@ -51,15 +52,22 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_HOST=db
-# Auto server config:
-#      - NEXTCLOUD_ADMIN_USER=${NEXTCLOUD_ADMIN_USER}
-#      - NEXTCLOUD_ADMIN_PASSWORD=${NEXTCLOUD_ADMIN_PASSWORD}
-#      - NEXTCLOUD_TRUSTED_DOMAINS=${NEXTCLOUD_DOMAIN}
+
+      # Auto configuration server
+      - NEXTCLOUD_ADMIN_USER=${NEXTCLOUD_ADMIN_USER}
+      - NEXTCLOUD_ADMIN_PASSWORD=${NEXTCLOUD_ADMIN_PASSWORD}
+      - NEXTCLOUD_TRUSTED_DOMAINS=${NEXTCLOUD_DOMAIN}
     depends_on:
       - db
       - redis
     networks:
       - nextcloud_internal
+    healthcheck:
+      test: [ "CMD-SHELL", "su -s /bin/sh www-data -c 'php /var/www/html/occ status | grep -q true'" ]
+      interval: 30s
+      timeout: 10s
+      retries: 10
+      start_period: 15s
 
   nginx:
     image: nginx:alpine
@@ -73,21 +81,21 @@ services:
       - cloud
     labels:
       - traefik.enable=true
-      - traefik.http.routers.nextcloud.rule=Host(`${NEXTCLOUD_DOMAIN}`)
-      - traefik.http.services.nextcloud.loadbalancer.server.port=80
-      - traefik.http.middlewares.nextredirect.redirectregex.regex=^https://www\.(.*)
-      - traefik.http.middlewares.nextredirect.redirectregex.replacement=https://$${1}
-      - traefik.http.routers.nextcloud.middlewares=nextredirect
-      - traefik.http.middlewares.nc-header.headers.frameDeny=true
-      - traefik.http.middlewares.nc-header.headers.contentTypeNosniff=true
-      - traefik.http.middlewares.nc-header.headers.stsIncludeSubdomains=true
-      - traefik.http.middlewares.nc-header.headers.stsPreload=true
-      - traefik.http.middlewares.nc-header.headers.stsSeconds=31536000
-      - traefik.http.middlewares.nc-header.headers.referrerPolicy=same-origin
-      - traefik.http.middlewares.nc-header.headers.browserXssFilter=true
-      - traefik.http.middlewares.nc-header.headers.customRequestHeaders.X-Forwarded-Proto=https
-      - traefik.http.middlewares.nc-header.headers.customResponseHeaders.X-Robots-Tag=none
-      - traefik.http.middlewares.nc-header.headers.customFrameOptionsValue=SAMEORIGIN
+      - traefik.http.routers.${PROJECT_NAME}.rule=Host(`${NEXTCLOUD_DOMAIN}`)
+      - traefik.http.services.${PROJECT_NAME}.loadbalancer.server.port=80
+      - traefik.http.middlewares.${PROJECT_NAME}_redirect.redirectregex.regex=^https://www\.(.*)
+      - traefik.http.middlewares.${PROJECT_NAME}_redirect.redirectregex.replacement=https://$${1}
+      - traefik.http.routers.${PROJECT_NAME}.middlewares=${PROJECT_NAME}_redirect
+      - traefik.http.middlewares.${PROJECT_NAME}-header.headers.frameDeny=true
+      - traefik.http.middlewares.${PROJECT_NAME}-header.headers.contentTypeNosniff=true
+      - traefik.http.middlewares.${PROJECT_NAME}-header.headers.stsIncludeSubdomains=true
+      - traefik.http.middlewares.${PROJECT_NAME}-header.headers.stsPreload=true
+      - traefik.http.middlewares.${PROJECT_NAME}-header.headers.stsSeconds=31536000
+      - traefik.http.middlewares.${PROJECT_NAME}-header.headers.referrerPolicy=same-origin
+      - traefik.http.middlewares.${PROJECT_NAME}-header.headers.browserXssFilter=true
+      - traefik.http.middlewares.${PROJECT_NAME}-header.headers.customRequestHeaders.X-Forwarded-Proto=https
+      - traefik.http.middlewares.${PROJECT_NAME}-header.headers.customResponseHeaders.X-Robots-Tag=none
+      - traefik.http.middlewares.${PROJECT_NAME}-header.headers.customFrameOptionsValue=SAMEORIGIN
     networks:
       - nextcloud_internal
       - proxy
