--- a/example.env
+++ b/example.env
@@ -1,7 +1,10 @@
 NEXTCLOUD_DOMAIN=nextcloud.localhost
+NEXTCLOUD_TRUSTED_DOMAINS=nextcloud.localhost
 NEXTCLOUD_ADMIN_USER=admin
 NEXTCLOUD_ADMIN_PASSWORD=pass
 
-POSTGRES_PASSWORD=root
-POSTGRES_DB=root
-POSTGRES_USER=root
+POSTGRES_PASSWORD=nextcloud
+POSTGRES_DB=nextcloud
+POSTGRES_USER=nextcloud
+
+PROJECT_NAME=nextcloud
