Fix plugin installation

--- a/nextcloud.conf
+++ b/nextcloud.conf
@@ -21,17 +21,9 @@ server {
     fastcgi_read_timeout 720;
 
     # set max upload size and increase upload timeout:
-    client_max_body_size 512M;
+    client_max_body_size 2048M;
     client_body_timeout 720s;
-    fastcgi_buffers 64 4K;
-
-    # Enable gzip but do not remove ETag headers
-    gzip on;
-    gzip_vary on;
-    gzip_comp_level 4;
-    gzip_min_length 256;
-    gzip_proxied expired no-cache no-store private no_last_modified no_etag auth;
-    gzip_types application/atom+xml text/javascript application/javascript application/json application/ld+json application/manifest+json application/rss+xml application/vnd.geo+json application/vnd.ms-fontobject application/wasm application/x-font-ttf application/x-web-app-manifest+json application/xhtml+xml application/xml font/opentype image/bmp image/svg+xml image/x-icon text/cache-manifest text/css text/plain text/vcard text/vnd.rim.location.xloc text/vtt text/x-component text/x-cross-domain-policy;
+    fastcgi_buffers 128 8K;
 
     # Pagespeed is not supported by Nextcloud, so if your server is built
     # with the `ngx_pagespeed` module, uncomment this line to disable it.
@@ -40,7 +32,7 @@ server {
     # The settings allows you to optimize the HTTP2 bandwidth.
     # See https://blog.cloudflare.com/delivering-http-2-upload-speed-improvements/
     # for tuning hints
-    client_body_buffer_size 512k;
+    client_body_buffer_size 2048k;
 
     # HTTP response headers borrowed from Nextcloud `.htaccess`
     add_header Referrer-Policy                   "no-referrer"       always;
@@ -58,10 +50,6 @@ server {
     # and include that list explicitly or add the file extension
     # only for Nextcloud like below:
     include mime.types;
-    types {
-        text/javascript js mjs;
-    	application/wasm wasm;
-    }
 
     # Specify how to handle directories -- specifying `/index.php$request_uri`
     # here as the fallback means that Nginx always exhibits the desired behaviour
@@ -126,17 +114,17 @@ server {
 
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $path_info;
-        fastcgi_param HTTPS on;
+#         fastcgi_param PATH_INFO $path_info;
+#         fastcgi_param HTTPS on;
 
-        fastcgi_param modHeadersAvailable true;         # Avoid sending the security headers twice
-        fastcgi_param front_controller_active true;     # Enable pretty urls
+#         fastcgi_param modHeadersAvailable true;         # Avoid sending the security headers twice
+#         fastcgi_param front_controller_active true;     # Enable pretty urls
         fastcgi_pass php-handler;
 
         fastcgi_intercept_errors on;
         fastcgi_request_buffering off;
 
-        fastcgi_max_temp_file_size 0;
+#         fastcgi_max_temp_file_size 0;
     }
 
     # Serve static files
@@ -144,12 +132,6 @@ server {
         try_files $uri /index.php$request_uri;
         # HTTP response headers borrowed from Nextcloud `.htaccess`
         add_header Cache-Control                     "public, max-age=15778463$asset_immutable";
-        add_header Referrer-Policy                   "no-referrer"       always;
-        add_header X-Content-Type-Options            "nosniff"           always;
-        add_header X-Frame-Options                   "SAMEORIGIN"        always;
-        add_header X-Permitted-Cross-Domain-Policies "none"              always;
-        add_header X-Robots-Tag                      "noindex, nofollow" always;
-        add_header X-XSS-Protection                  "1; mode=block"     always;
         access_log off;     # Optional: Don't log access to assets
     }
 
