--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,10 @@ services:
       - NEXTCLOUD_ADMIN_USER=${NEXTCLOUD_ADMIN_USER}
       - NEXTCLOUD_ADMIN_PASSWORD=${NEXTCLOUD_ADMIN_PASSWORD}
       - NEXTCLOUD_TRUSTED_DOMAINS=${NEXTCLOUD_DOMAIN}
+
+      - PHP_MEMORY_LIMIT=2048M
+      - PHP_OPCACHE_ENABLE=1
+      - PHP_OPCACHE_ENABLE_CLI=1
     depends_on:
       - db
       - redis
@@ -119,6 +123,7 @@ services:
     volumes:
       - nextcloud:/var/www/html
       - ./nextcloud.ini:/usr/local/etc/php/conf.d/nextcloud.ini:ro
+      - ./php.ini:/usr/local/etc/php-fpm.d/www.conf:ro
     entrypoint: /cron.sh
     environment:
       - REDIS_HOST=redis
