--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,9 @@
 networks:
   internal:
     driver: bridge
+    ipam:
+      config:
+        - subnet: 172.20.0.0/16
   proxy:
     external: true
 
