--- a/nextcloud.conf
+++ b/nextcloud.conf
@@ -76,6 +76,12 @@ server {
         access_log off;
     }
 
+    types {
+        application/javascript mjs;
+        application/json       map;
+        font/opentype otf;
+    }
+
     # Make a regex exception for `/.well-known` so that clients can still
     # access it despite the existence of the regex rule
     # `location ~ /(\.|autotest|...)` which would otherwise handle requests
@@ -130,15 +136,25 @@ server {
     # Serve static files
     location ~ \.(?:css|js|mjs|svg|gif|ico|jpg|png|webp|wasm|tflite|map|ogg|flac)$ {
         try_files $uri /index.php$request_uri;
-        # HTTP response headers borrowed from Nextcloud `.htaccess`
-        add_header Cache-Control                     "public, max-age=15778463$asset_immutable";
-        access_log off;     # Optional: Don't log access to assets
+        add_header Cache-Control "public, max-age=15778463$asset_immutable";
+        access_log off;
+    }
+
+    location ~ \.js\.map$ {
+        try_files $uri /index.php$request_uri;
+        add_header Cache-Control "public, max-age=15778463$asset_immutable";
+        add_header Content-Type application/json;
+        access_log off;
     }
 
     location ~ \.woff2?$ {
         try_files $uri /index.php$request_uri;
         expires 7d;         # Cache-Control policy borrowed from `.htaccess`
         access_log off;     # Optional: Don't log access to assets
+    }
+
+    location ~ ^/data/ {
+        deny all;
     }
 
     # Rule borrowed from `.htaccess`
