--- a/nginx.conf
+++ b/nginx.conf
@@ -79,13 +79,13 @@ http {
     open_file_cache_errors on;
 
     proxy_redirect off;
-    proxy_set_header HOST $host;
+    proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Real-IP $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-FORWARDED-PROTO "https";
+    proxy_set_header X-Forwarded-Proto "https";
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection $http_connection;
+
     client_max_body_size 1m;
     client_body_buffer_size 128k;
     proxy_connect_timeout 720;
