--- a/example.env
+++ b/example.env
@@ -1,10 +1,57 @@
-NEXTCLOUD_DOMAIN=nextcloud.localhost
-NEXTCLOUD_TRUSTED_DOMAINS=nextcloud.localhost
-NEXTCLOUD_ADMIN_USER=admin
-NEXTCLOUD_ADMIN_PASSWORD=pass
-
-POSTGRES_PASSWORD=nextcloud
-POSTGRES_DB=nextcloud
-POSTGRES_USER=nextcloud
-
+# ===========================================
+# PROJECT CONFIGURATION
+# ===========================================
 PROJECT_NAME=nextcloud
+
+# ===========================================
+# DOMAIN CONFIGURATION
+# ===========================================
+NEXTCLOUD_DOMAIN=nextcloud.DOMAIN
+OFFICE_DOMAIN=office.DOMAIN
+
+# ===========================================
+# NEXTCLOUD ADMIN CONFIGURATION
+# ===========================================
+NEXTCLOUD_ADMIN_USER=admin
+NEXTCLOUD_ADMIN_PASSWORD=your_secure_admin_password_here
+
+# ===========================================
+# DATABASE CONFIGURATION (PostgreSQL)
+# ===========================================
+POSTGRES_USER=nextcloud
+POSTGRES_PASSWORD=your_secure_database_password_here
+POSTGRES_DB=nextcloud
+
+# ===========================================
+# ONLYOFFICE CONFIGURATION
+# ===========================================
+# JWT Secret must be at least 32 characters long
+ONLYOFFICE_JWT_SECRET=your_very_secure_jwt_secret_key_minimum_32_characters_long_example
+
+# ===========================================
+# OPTIONAL: ADDITIONAL SETTINGS
+# ===========================================
+
+# Uncomment and configure if needed
+# NEXTCLOUD_DATA_DIR=/var/www/html/data
+# NEXTCLOUD_TABLE_PREFIX=oc_
+
+# Email configuration (optional)
+# SMTP_HOST=smtp.example.com
+# SMTP_PORT=587
+# SMTP_SECURE=tls
+# SMTP_NAME=noreply@decy.eu
+# SMTP_PASSWORD=your_smtp_password
+
+# Backup configuration (optional)
+# BACKUP_SCHEDULE=0 2 * * *
+# BACKUP_RETENTION_DAYS=30
+
+# ===========================================
+# SECURITY NOTES
+# ===========================================
+# 1. Change all default passwords
+# 2. Use strong passwords (minimum 16 characters)
+# 3. JWT secret should be random and at least 32 characters
+# 4. Keep this file secure and never commit to version control
+# 5. Use different passwords for each service
