--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -146,7 +146,7 @@ services:
       - traefik.http.routers.${PROJECT_NAME}-office.rule=Host(`${OFFICE_DOMAIN}`)
       - traefik.http.routers.${PROJECT_NAME}-office.entrypoints=websecure
       - traefik.http.routers.${PROJECT_NAME}-office.tls=true
-      - traefik.http.routers.${PROJECT_NAME}-office.tls.certresolver=letsencrypt
+      - traefik.http.routers.${PROJECT_NAME}-office.tls.certresolver=myresolver
       - traefik.http.services.${PROJECT_NAME}-office.loadbalancer.server.port=80
 
       # HTTP to HTTPS redirect
